--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -37,11 +37,11 @@
                             <button class="btn btn-warning" form="delete">刪除貨單</button>
                             <button class="btn btn-primary" form="update">更新貨單</button>
                         </div>
-                        <form action="./delete" method="post" id="delete">
+                        <form action="/deliveryOrder/delete" method="post" id="delete">
                         </form>
                     </div>
                     <div class="row">
-                        <form action="./update" method="post" id="update">
+                        <form action="/deliveryOrder/update" method="post" id="update">
                             <div class="row my-1">
                                 <div class="col fw-bold ">
                                     <label for="DeliveryID">送貨單號:</label>
