--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <form action="./saveProduct" method="post" id="saveProduct">
+                <form action="/product/saveProduct" method="post" id="saveProduct">
                     <div class="row my-1 border-bottom border-primary bg-primary-subtle text-black">
                         <div class="col fw-bold fs-5 text-center">
                             新貨品資料
