--- a/views/deliveryOrder/create.ejs
+++ b/views/deliveryOrder/create.ejs
@@ -59,7 +59,7 @@
                         </form>-->
                 </div>
                 <div class="row">
-                    <form action="./create" method="post" id="create">
+                    <form action="/deliveryOrder/create" method="post" id="create">
                         <div class="row my-1">
                             <div class="col fw-bold ">
                                 <label for="DeliveryID">
