--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -57,7 +57,7 @@
                           
                         </div>  
                     <div class="col text-center">
-                      <a href="./deliveryOrder/info?delivery_id=" class="darkmode"><%= datas[i]._id.getTimestamp() %></a>
+                      <a href="/deliveryOrder/info?delivery_id=" class="darkmode"><%= datas[i]._id.getTimestamp() %></a>
                     </div>
                     <div class="col text-center">
                       <%= datas[i].who %>
