--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -4,6 +4,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script src="/js/darkMode.js"></script>
+        <script>
+            function addName(input,output){
+                document.getElementById(output).value = input[input.selectedIndex].text;
+            }
+        </script>
     </head>
 
     <body class="darkmode">
@@ -101,8 +106,17 @@
                                         <div class="row py-1 my-1 border-bottom border-primary">
                                             <div class="col">
                                                 <label for="item[<%= i %>][name]">貨品名稱:</label>
-                                                <input type="hidden" name="item[product_id]" value="<%= (data.items[i].product_id) %>">
-                                                <input type='text' class="form-control text-center" name="item[name]" id="item[<%= i %>][name]" value="<%= (data.items[i].name).replace(/\n/g, '') %>" size="50">
+                                                <!-- hidden item name -->
+                                                <input type="hidden" name="item[name]" id="item[<%= i %>][name]" value="<%= data.items[i].name %>">
+                                                <!-- select id , display name -->
+                                                <select name="item[product_id]" id="item[<%= i %>][product_id]" onchange="addName(this,'item[<%= i %>][name]')">
+                                                    <option>請選擇貨品</option>
+                                                    <% for (let product of products){ %>
+                                                        <option value="<%= product._id %>" <%= product._id == data.items[i].product_id? 'selected':'' %>><%= (product.Name).replace(/\n/g, '') %></option>
+                                                    <% } %>
+                                                </select>
+
+                                                <!-- <input type='text' class="form-control text-center" name="item[name]" id="item[<%= i %>][name]" value="<%= (data.items[i].name).replace(/\n/g, '') %>" size="50"> -->
                                             </div>
                                             <div class="col">
                                                 <label for="item[<%= i %>][count]">總數量:</label>
@@ -114,14 +128,28 @@
                                             </div>
                                             <div class="col">
                                                 <label for="item[<%= i %>][stock_id]">貨架編號:</label>
-                                                <input type='text' class="form-control text-center" name="item[stock_id]" id="item[<%= i %>][stock_id]" value="<%= (data.items[i].stock_id) %>">
+                                                <select name="item[stock_id]" id="item[<%= i %>][stock_id]">
+                                                    <option>請選擇貨架</option>
+                                                    <% for (let stock of stocks){ %>
+                                                        <option value="<%= stock._id %>" ><%= stock.area + " " + stock.name %></option>
+                                                    <% } %>
+                                                </select>
+                                                <!-- <input type='text' class="form-control text-center" name="item[stock_id]" id="item[<%= i %>][stock_id]" value="<%= (data.items[i].stock_id) %>"> -->
                                             </div>
                                         </div>
                                     <% }for(i = 0 ; i < 2 ; i++){ %>
                                         <div class="row py-1 my-1 border-bottom border-primary">
                                             <div class="col">
-                                                <label for="up_item[<%= i %>][name]">貨品名稱:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[name]" id="up_item[<%= i %>][name]" value="" size="50">
+                                                <label for="up_item[<%= i %>][product_id]">貨品名稱:</label>
+                                                <!-- hidden up_item name -->
+                                                <input type="hidden" name="up_item[name]" id="up_item[<%= i %>][name]">
+                                                <!-- select id , display name -->
+                                                <select name="up_item[product_id]" id="up_item[<%= i %>][product_id]" onchange="addName(this,'up_item[<%= i %>][name]')">
+                                                    <% for (let product of products){ %>
+                                                        <option value="<%= product._id %>" ><%= product.Name %></option>
+                                                    <% } %>
+                                                </select>
+                                                <!-- <input type='text' class="form-control text-center" name="up_item[name]" id="up_item[<%= i %>][name]" value="" size="50"> -->
                                             </div>
                                             <div class="col">
                                                 <label for="up_item[<%= i %>][count]">總數量:</label>
@@ -133,7 +161,13 @@
                                             </div>
                                             <div class="col">
                                                 <label for="up_item[<%= i %>][stock_id]">貨架編號:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[stock_id]" id="up_item[<%= i %>][stock_id]" value="">
+                                                <select name="up_item[stock_id]" id="up_item[<%= i %>][stock_id]">
+                                                    <% for (let stock of stocks){ %>
+                                                        <option value="<%= stock._id %>" ><%= stock.area + " " + stock.name %></option>
+                                                    <% } %>
+                                                </select>
+
+                                                <!-- <input type='text' class="form-control text-center" name="up_item[stock_id]" id="up_item[<%= i %>][stock_id]" value=""> -->
                                             </div>
                                         </div>
                                     <% }%>
