--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -117,26 +117,92 @@
                                                 <input type='text' class="form-control text-center" name="item[stock_id]" id="item[<%= i %>][stock_id]" value="<%= (data.items[i].stock_id) %>">
                                             </div>
                                         </div>
-                                    <% }for(i = 0 ; i < 2 ; i++){ %>
+                                        <% } %>
                                         <div class="row py-1 my-1 border-bottom border-primary">
                                             <div class="col">
-                                                <label for="up_item[<%= i %>][name]">貨品名稱:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[name]" id="up_item[<%= i %>][name]" value="" size="50">
+                                                <input type="hidden" value="" id="_id">
+                                                <label for="up_Product_id">貨品編號:</label>
+                                                <select name="up_product_id" id="up_Product_id">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[0]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data._id%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
                                             </div>
                                             <div class="col">
-                                                <label for="up_item[<%= i %>][count]">總數量:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[count]" id="up_item[<%= i %>][count]" value="" size="10">
+                                                <label for="up_Name">貨品名稱:</label>
+                                                <select name="up_name" id="up_Name">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[1]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data._id%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
                                             </div>
                                             <div class="col">
-                                                <label for="up_item[<%= i %>][completed]">已到達數量:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[completed]" id="up_item[<%= i %>][completed]" value="">
+                                                <label for="up_Type">類型:</label>
+                                                <select id="up_Type">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[2]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data._id%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
                                             </div>
                                             <div class="col">
-                                                <label for="up_item[<%= i %>][stock_id]">貨架編號:</label>
-                                                <input type='text' class="form-control text-center" name="up_item[stock_id]" id="up_item[<%= i %>][stock_id]" value="">
+                                                <label for="up_Brand">品牌:</label>
+                                                <select name="up_brand" id="up_Brand">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[3]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data._id%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
                                             </div>
+                                            <div class="col">
+                                                <label for="up_Origin">來源地:</label>
+                                                <select name="up_origin" id="up_Origin">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[4]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data._id%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
+                                            </div>
+                                            <div class="col">
+                                                <label for="up_Stock_id">所在倉庫區:</label>
+                                                <select name="up_stock_id" id="up_Stock_id">
+                                                    <option value="">-----請選擇-----</option>
+                                                    <% for(let data of lists[5]){ %>
+                                                        <option value="<%= data._id %>">
+                                                            <%= data.name%>
+                                                        </option>
+                                                        <% } %>
+                                                </select>
+                                            </div>
+                                            <div class="col">
+                                                <label for="up_count">總數量:</label>
+                                                <input type='text' class="form-control text-center" name="up_count" id="up_count"
+                                                    value="" size="10">
+                                            </div>
+                                            <div class="col">
+                                                <label for="up_completed">已到達數量:</label>
+                                                <input type='text' class="form-control text-center" name="up_completed"
+                                                    id="up_completed" value="">
+                                            </div>
+                                           <!-- <div class="col">
+                                                <label for="stock_id">貨架編號:</label>
+                                                <input type='text' class="form-control text-center" name="stock_id"
+                                                    id="stock_id" value="">
+                                            </div>-->
                                         </div>
-                                    <% }%>
+
                                 </div>
                             </div>
 
