add item other  pull

--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -82,6 +82,7 @@
                       <option value="rice" <%= data.Type === 'rice' ? 'selected' : '' %>>Rice</option>
                       <option value="salt" <%= data.Type === 'salt' ? 'selected' : '' %>>Salt</option>
                       <option value="sugar" <%= data.Type === 'sugar' ? 'selected' : '' %>>Sugar</option>
+                      <option value="other" <%= data.Type === 'other' ? 'selected' : '' %>>Other</option>
                     </select>
               </div>
             </div>
