--- a/views/deliveryOrder/create.ejs
+++ b/views/deliveryOrder/create.ejs
@@ -72,14 +72,14 @@
                     </div>
                     <div class="col">
                         <!--<button class="btn btn-warning" form="delete">刪除貨單</button>-->
-                        <button class="btn btn-primary" type="button" form="create" id="Submit">新增貨單</button>
+                        <button class="btn btn-primary" type="button" form="submit" id="create">新增貨單</button>
                         <button class="btn btn-primary" id='addItemButton'>加新物品</button>
                     </div>
                     <!--<form action="./delete" method="post" id="delete">
                         </form>-->
                 </div>
                 <div class="row">
-                    <form action="/deliveryOrder/create" method="post"  id="create">
+                    <form action="/deliveryOrder/create" method="post"  id="submit">
                         <div class="row my-1">
                             <div class="col fw-bold ">
                                 <label for="DeliveryID">
