debug info page delete

--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -83,6 +83,7 @@
                     </div>
 
                     <form action="/deliveryOrder/delete" method="post" id="delete">
+                        <input type="hidden" name="delivery_id" value="<%= datas._id %>">
                     </form>
 
                 </div>
