--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -23,7 +23,7 @@
               <button type="submit" form="logout" class="list-group-item darkmode">登出</button>
           </div> 
           
-          <form action="/user/logout" method="post" id="logout">
+          <form action="/user/logout" method="post" id="logout" hidden>
           </form> 
         </div>
 
