debug update delivery order

--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -89,6 +89,7 @@
                 </div>
 
                 <form action="/deliveryOrder/update" method="post" id="submit">
+                    <input type="hidden" name="_id" value="<%= datas._id %>">
                     <div class="row">
 
                         <label class="h4">貨單資料</label>
